Edited the edit allocation button

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -210,7 +210,7 @@
           <div style="display: flex; gap: 0.4em;">
             <span style="align-items: center;">
               <div onclick="generateModal('pBudgetEditModal{{ budget_details.id }}','pEditBudgetClose{{ budget_details.id }}','')"
-              style="box-shadow: var(--shadow); padding: 0.2em 0.4em 0.2em 0em;
+              style="cursor: pointer; box-shadow: var(--shadow); padding: 0.2em 0.4em 0.2em 0em;
                background: var(--bg-light); border-radius: 0.4em; display: flex; gap: 0.2em;">
                 <p style="flex: 1;" class="p-category-limit-amount sensitive" 
                    data-value="{{ budget_allocations.budget.amount | commafy(0) }}">
@@ -845,8 +845,8 @@
         <input type="text" value="{{ allocation_category_name }}" readonly>
         <label>Allocation Amount</label>
         <input type="number" name="allocated_amount" value="{{ allocation_allocated_amount }}" required>
+        <button type="submit" class="p-modal-btn" id="pcloseEditAllocationBtn{{ allocation_category_id }}">Save</button>
       </div>
-      <button type="submit" class="p-modal-btn" id="pcloseEditAllocationBtn{{ allocation_category_id }}">Save</button>
     </form>
   </div>
 </div>
