--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -244,7 +244,7 @@ input {
 .p-summary-card {
     display: flex;
     gap: .8em;
-    padding: .6em;
+    padding: 0 0.6em 0.6em 0.6em;
 }
 
 .p-summary-cards {
@@ -723,11 +723,13 @@ input {
 /* ---------------------- Category Progress section ---------------------- */
 .p-category-progress-paragraph {
     font-weight: 600;
-    margin-top: 0.8em;
-    padding: 0.4em 1em;
+    margin-top: 0.4em;
+    margin-left: 0.6em;
+    margin-right: 0.6em;
     border-color: var(--primary);
     border-width: .1em;
-    border-top: 1px solid var(--border-muted);
+    padding: 0.4em 0em 0.4em 0.2em;
+    border-top: 0.4em solid var(--border-muted);
 }
 
 .p-modal-gap {
